--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
   </div>
 
-  <div class="content">
+  <div class="content hide">
     <h1>Hello dear family,</h1>
     <p>We are honored you will share in our special day.
       <br>Your presence is our gift!
