prepping for slideshow organization

--- a/photos.html
+++ b/photos.html
@@ -20,22 +20,22 @@
           
           slide_links : 'blank',  // Individual links for each slide (Options: false, 'num', 'name', 'blank')
           slides : [
-            { image : 'images/2B4A5767.jpg' },
-            { image : 'images/466A7158.jpg' },
-            { image : 'images/2B4A5695.jpg' },
-            { image : 'images/2B4A5704.jpg' },
-            { image : 'images/2B4A5699.jpg' },
-            { image : 'images/2B4A5720.jpg' },
-            { image : 'images/2B4A5855.jpg' },
-            { image : 'images/2B4A5908.jpg' },
-            { image : 'images/370A7782-6.jpg' },
-            { image : 'images/370A7842.jpg' },
-            { image : 'images/370A7858.jpg' },
-            { image : 'images/370A7890.jpg' },
-            { image : 'images/466A7180.jpg' },
-            { image : 'images/466A7230.jpg' },
-            { image : 'images/466A7280.jpg' },
-            { image : 'images/2B4A5964.jpg' }
+            { image : 'slideshow/2B4A5767.jpg' },
+            { image : 'slideshow/466A7158.jpg' },
+            { image : 'slideshow/2B4A5695.jpg' },
+            { image : 'slideshow/2B4A5704.jpg' },
+            { image : 'slideshow/2B4A5699.jpg' },
+            { image : 'slideshow/2B4A5720.jpg' },
+            { image : 'slideshow/2B4A5855.jpg' },
+            { image : 'slideshow/2B4A5908.jpg' },
+            { image : 'slideshow/370A7782-6.jpg' },
+            { image : 'slideshow/370A7842.jpg' },
+            { image : 'slideshow/370A7858.jpg' },
+            { image : 'slideshow/370A7890.jpg' },
+            { image : 'slideshow/466A7180.jpg' },
+            { image : 'slideshow/466A7230.jpg' },
+            { image : 'slideshow/466A7280.jpg' },
+            { image : 'slideshow/2B4A5964.jpg' }
           ]
         });
       });
