--- a/photos.html
+++ b/photos.html
@@ -1,59 +1,59 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <title>Welcome to The Griggitts</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<head>
+  <title>Twila and Clayton get Hitched</title>
+  <!-- <title>Welcome to The Griggitts</title> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <link rel="stylesheet" href="styles.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="css/slideshow.css" type="text/css" media="screen" />
 
-    <script type="text/javascript" src="jquery.min.js"></script>
-    <script type="text/javascript" src="jquery.easing.min.js"></script>
-    <script type="text/javascript" src="supersized.3.2.7.min.js"></script>
+  <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="js/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="js/supersized.3.2.7.min.js"></script>
 
-    <script type="text/javascript">
-      $(function() {
-        $.supersized({
-          slide_interval : 5000,
-          transition : 1, // 0-None, 1-Fade, 2-Slide Top, 3-Slide Right, 4-Slide Bottom, 5-Slide Left, 6-Carousel Right, 7-Carousel Left
-          transition_speed : 1000,
-          
-          slide_links : 'blank',  // Individual links for each slide (Options: false, 'num', 'name', 'blank')
-          slides : [
-            { image : 'slideshow/2B4A5767.jpg' },
-            { image : 'slideshow/466A7158.jpg' },
-            { image : 'slideshow/2B4A5695.jpg' },
-            { image : 'slideshow/2B4A5704.jpg' },
-            { image : 'slideshow/2B4A5699.jpg' },
-            { image : 'slideshow/2B4A5720.jpg' },
-            { image : 'slideshow/2B4A5855.jpg' },
-            { image : 'slideshow/2B4A5908.jpg' },
-            { image : 'slideshow/370A7782-6.jpg' },
-            { image : 'slideshow/370A7842.jpg' },
-            { image : 'slideshow/370A7858.jpg' },
-            { image : 'slideshow/370A7890.jpg' },
-            { image : 'slideshow/466A7180.jpg' },
-            { image : 'slideshow/466A7230.jpg' },
-            { image : 'slideshow/466A7280.jpg' },
-            { image : 'slideshow/2B4A5964.jpg' }
-          ]
-        });
+  <script type="text/javascript">
+    $(function() {
+      $.supersized({
+        slide_interval : 5000,
+        transition : 1, // 0-None, 1-Fade, 2-Slide Top, 3-Slide Right, 4-Slide Bottom, 5-Slide Left, 6-Carousel Right, 7-Carousel Left
+        transition_speed : 1000,
+        
+        slide_links : 'blank',  // Individual links for each slide (Options: false, 'num', 'name', 'blank')
+        slides : [
+          { image : 'slideshow/2B4A5767.jpg' },
+          { image : 'slideshow/466A7158.jpg' },
+          { image : 'slideshow/2B4A5695.jpg' },
+          { image : 'slideshow/2B4A5704.jpg' },
+          { image : 'slideshow/2B4A5699.jpg' },
+          { image : 'slideshow/2B4A5720.jpg' },
+          { image : 'slideshow/2B4A5855.jpg' },
+          { image : 'slideshow/2B4A5908.jpg' },
+          { image : 'slideshow/370A7782-6.jpg' },
+          { image : 'slideshow/370A7842.jpg' },
+          { image : 'slideshow/370A7858.jpg' },
+          { image : 'slideshow/370A7890.jpg' },
+          { image : 'slideshow/466A7180.jpg' },
+          { image : 'slideshow/466A7230.jpg' },
+          { image : 'slideshow/466A7280.jpg' },
+          { image : 'slideshow/2B4A5964.jpg' }
+        ]
       });
-    </script>
+    });
+  </script>
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-20440114-7', 'auto');
-      ga('send', 'pageview');
+    ga('create', 'UA-20440114-7', 'auto');
+    ga('send', 'pageview');
+  </script>
+</head>
 
-    </script>
-  </head>
 <body>
-
   <div id="background-slideshow">
     <a id="prevslide" class="load-item"></a>
     <a id="nextslide" class="load-item"></a>
