slideshow has header

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <div class="banner" id="home">
+  <div class="banner background" id="home">
     <div class="banner-navigation">
       <div class="container">
         <div class="logo">
