--- a/photos.html
+++ b/photos.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="css/slideshow.css" type="text/css" media="screen" />
 
   <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
@@ -54,6 +56,27 @@
 </head>
 
 <body>
+  <div class="banner" id="home">
+    <div class="banner-navigation">
+      <div class="container">
+        <div class="logo">
+          <a href="index.html"><h1>T&C<span> Wedding</span></h1></a>
+        </div>
+        <span class="menu"></span>
+        <div class="top-menu">
+          <ul class="nav">
+            <li class="hvr-sweep-to-bottom"><a href="photos.html">Photos</a></li>
+            <!-- <li class="hvr-sweep-to-bottom"><a href="typography.html">Wedding Party</a></li> -->
+            <!-- <li class="hvr-sweep-to-bottom"><a href="moments.html">RSVP</a></li> -->
+            <!-- <li class="hvr-sweep-to-bottom"><a href="contact.html">Registry</a></li> -->
+          </ul>
+          <div class="clearfix"></div>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+    </div>
+  </div>
+
   <div id="background-slideshow">
     <a id="prevslide" class="load-item"></a>
     <a id="nextslide" class="load-item"></a>
