--- a/photos.html
+++ b/photos.html
@@ -14,6 +14,8 @@
   <script type="text/javascript" src="js/jquery.easing.min.js"></script>
   <script type="text/javascript" src="js/supersized.3.2.7.min.js"></script>
 
+  <link href="http://fonts.googleapis.com/css?family=Lora:400,400italic|Niconne" rel="stylesheet" type="text/css">
+
   <script type="text/javascript">
     $(function() {
       $.supersized({
