spacing out the ctas

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
   <div class="story-section">
     <div class="container">
       <div class="story-grids">
-        <div class="col-md-3 story-grid">
+        <div class="col-sm-3 story-grid">
           <h4>Our Story</h4>
           <p>He asked, she said yes. Find out how it all came to be.</p>
         </div>
-        <div class="col-md-3 story-grid">
+        <div class="col-sm-3 story-grid">
           <h4>The Big Event</h4>
           <p>Eat, drink, dance &mdash; get ready for a great time!</p>
         </div>
-        <div class="col-md-3 story-grid">
+        <div class="col-sm-3 story-grid">
           <h4>Travel Info</h4>
           <p>Everything you need to know about getting to the party.</p>
         </div>
-        <div class="col-md-3 story-grid">
+        <div class="col-sm-3 story-grid">
           <h4>Registry</h4>
           <p>Help us start our new home together.</p>
         </div>
