--- a/about.html
+++ b/about.html
@@ -1,47 +1,43 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Wed Day a Wedding Planner Category Flat Bootstarp Resposive Website Template | About :: w3layouts</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Twila and Clayton get Hitched</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-  <link href="css/style.css" rel='stylesheet' type='text/css' />  
+
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" rel="stylesheet" type="text/css" />  
+
   <script src="js/jquery-1.11.1.min.js"></script>
-  <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic|Niconne' rel='stylesheet' type='text/css'>
+  <script src="js/scripts.js"></script>
+
+  <link href="http://fonts.googleapis.com/css?family=Lora:400,400italic|Niconne" rel="stylesheet" type="text/css">
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-20440114-7', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
+
 <body>
-  <div class="header" id="home">
-    <div class="container">
-      <div class="header-left">
-        <a href="signup.html"class="sign">SIGN UP</a>
-      </div>
-      <div class="header-right">
-        <h6>Follows Us :</h6>
-        <ul class="f-icons">
-          <li><a href="#" class="facebook"> </a></li>
-          <li><a href="#" class="p"> </a></li>
-          <li><a href="#" class="twitter"> </a></li>
-        </ul>
-        <div class="clearfix"></div>
-      </div>
-      <div class="clearfix"> </div>
-    </div>
-  </div>  
-  
   <div class="banner two">
-    <div class="container">
-      <div class="banner-navigation">
+    <div class="banner-navigation">
+      <div class="container">
         <div class="logo">
-          <a href="index.html"><h1>Wed<span> Day</span></h1></a>
+          <a href="index.html"><h1>T&C<span> Wedding</span></h1></a>
         </div>
         <span class="menu"></span>
         <div class="top-menu">
           <ul class="nav">
-            <li class="hvr-sweep-to-bottom"><a href="index.html">Home</a></li>
-            <li class="hvr-sweep-to-bottom cap"><a href="about.html">About</a></li>
-            <li class="hvr-sweep-to-bottom"><a href="typography.html">Services</a></li>
-            <li class="hvr-sweep-to-bottom"><a href="moments.html">Big Moments</a></li>
-            <li class="hvr-sweep-to-bottom"><a href="contact.html">Contact Us</a></li>
+            <li class="hvr-sweep-to-bottom"><a href="photos.html">Photos</a></li>
+            <!-- <li class="hvr-sweep-to-bottom"><a href="typography.html">Wedding Party</a></li> -->
+            <!-- <li class="hvr-sweep-to-bottom"><a href="moments.html">RSVP</a></li> -->
+            <!-- <li class="hvr-sweep-to-bottom"><a href="contact.html">Registry</a></li> -->
           </ul>
           <div class="clearfix"></div>
         </div>
@@ -49,20 +45,15 @@
       </div>
     </div>
   </div>
-<!--//banner-->
-<!--/bottom-section-->
+
+
   <div class="about-section">
     <div class="container">
-        <h3>About Our Story</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet pharetra 
-            nunc, non scelerisque ligula. Crasveljusto nulla Vestibuluma.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet pharetra 
-            nunc, non scelerisque ligula. Crasveljusto nulla Vestibuluma.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet pharetra 
-            nunc, non scelerisque ligula. Crasveljusto nulla Vestibuluma.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet pharetra 
-            nunc, non scelerisque ligula. Crasveljusto nulla Vestibuluma.</p>
-      <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. nunc, non scelerisque ligula. Crasveljusto nulla Vestibuluma. nunc, non scelerisque ligula. Crasveljusto nulla Vestibuluma. Praesent sit amet pharetra 
-            nunc, non scelerisque ligula. Crasveljusto nulla Vestibuluma.</p>
+      <h3>About Our Story</h3>
+      <p></p>
+      <p class="para"></p>
       <div class="welcome-grids">
-      <ul class="ch-grid">
+        <ul class="ch-grid">
           <li>
             <div class="col-md-6 ch-item ch-img-1">        
               <div class="ch-info-wrap">
@@ -95,61 +86,60 @@
     </div>
   </div>
   <div class="people-section">
-      <div class="container">
-        <div class="people-grides">
-          <h3>Important Peoples</h3>
-             <div class="col-md-6 people-section1">
-               <div class="people-gride1">
-                 <div class="col-md-8 people-text">
-                   <h4> JULIA ANTHREW</h4>
-                  <h6>Maid of Honor</h6>
-                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. exercitation ullamco Duis aute irure dolor in reprehenderit.</p>
-                 </div>
-                 <div class="col-md-4 people-img">
-                   <img src="images/p1.jpg" alt="name" />
-                </div>
-                 <div class="clearfix"> </div>      
-               </div>
-               <div class="people-gride1">
-                 <div class="col-md-8 people-text">
-                   <h4>IRISH ANTHREW </h4>
-                  <h6>Bridesmaid</h6>
-                   <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. exercitation ullamco Duis aute irure dolor in reprehenderit .</p>
-                 </div>
-                 <div class="col-md-4 people-img">
-                     <img src="images/p2.jpg" alt="name" />
-                </div>
-                 <div class="clearfix"> </div>      
-               </div>
-             </div>
-             <div class="col-md-6 people-section2">
-               <div class="people-gride2">
-                 <div class="col-md-4 people-img two">
-                     <img src="images/p3.jpg" alt="name" />
-                </div>
-                 <div class="col-md-8 people-text two ">
-                   <h4>JONATHON ALEX</h4>
-                  <h6>Maid of Honor</h6>
-                   <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. exercitation ullamco Duis aute irure dolor in reprehenderit .</p>
-                 </div>
-                 <div class="clearfix"> </div>      
-               </div>
-               <div class="people-gride2">
-                 <div class="col-md-4 people-img two">
-                   <img src="images/p4.jpg" alt="name" />
-                </div>
-                 <div class="col-md-8 people-text two">
-                   <h4>SEAN MAHER </h4>
-                  <h6>Maid of Honor</h6>
-                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat ullamco Duis aute irure dolor in reprehenderit.</p>
-                 </div>
-                 <div class="clearfix"> </div>      
-               </div>
-             </div>
-             <div class="clearfix"> </div>      
+    <div class="container">
+      <div class="people-grides">
+        <h3>Important Peoples</h3>
+        <div class="col-md-6 people-section1">
+         <div class="people-gride1">
+           <div class="col-md-8 people-text">
+             <h4> JULIA ANTHREW</h4>
+             <h6>Maid of Honor</h6>
+             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. exercitation ullamco Duis aute irure dolor in reprehenderit.</p>
            </div>
+           <div class="col-md-4 people-img">
+             <img src="images/p1.jpg" alt="name" />
+           </div>
+           <div class="clearfix"> </div>      
+         </div>
+         <div class="people-gride1">
+           <div class="col-md-8 people-text">
+             <h4>IRISH ANTHREW </h4>
+             <h6>Bridesmaid</h6>
+             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. exercitation ullamco Duis aute irure dolor in reprehenderit .</p>
+           </div>
+           <div class="col-md-4 people-img">
+             <img src="images/p2.jpg" alt="name" />
+           </div>
+           <div class="clearfix"> </div>      
+         </div>
+       </div>
+       <div class="col-md-6 people-section2">
+         <div class="people-gride2">
+           <div class="col-md-4 people-img two">
+             <img src="images/p3.jpg" alt="name" />
+           </div>
+           <div class="col-md-8 people-text two ">
+             <h4>JONATHON ALEX</h4>
+             <h6>Maid of Honor</h6>
+             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. exercitation ullamco Duis aute irure dolor in reprehenderit .</p>
+           </div>
+           <div class="clearfix"> </div>      
+         </div>
+         <div class="people-gride2">
+           <div class="col-md-4 people-img two">
+             <img src="images/p4.jpg" alt="name" />
+           </div>
+           <div class="col-md-8 people-text two">
+            <h4>SEAN MAHER </h4>
+            <h6>Maid of Honor</h6>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat ullamco Duis aute irure dolor in reprehenderit.</p>
+          </div>
+          <div class="clearfix"> </div>      
         </div>
       </div>
-  <!--/peoples-->
+      <div class="clearfix"> </div>      
+    </div>
+  </div>
+</div>
 </body>
 </html>
