--- a/photos.html
+++ b/photos.html
@@ -58,21 +58,11 @@
 </head>
 
 <body>
-  <div class="banner" id="home">
+  <div class="banner transparent">
     <div class="banner-navigation">
-      <div class="container">
+      <div class="xcontainer">
         <div class="logo">
           <a href="index.html"><h1>T&C<span> Wedding</span></h1></a>
-        </div>
-        <span class="menu"></span>
-        <div class="top-menu">
-          <ul class="nav">
-            <li class="hvr-sweep-to-bottom"><a href="photos.html">Photos</a></li>
-            <!-- <li class="hvr-sweep-to-bottom"><a href="typography.html">Wedding Party</a></li> -->
-            <!-- <li class="hvr-sweep-to-bottom"><a href="moments.html">RSVP</a></li> -->
-            <!-- <li class="hvr-sweep-to-bottom"><a href="contact.html">Registry</a></li> -->
-          </ul>
-          <div class="clearfix"></div>
         </div>
         <div class="clearfix"></div>
       </div>
