--- a/about.html
+++ b/about.html
@@ -1,61 +1,10 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-  <title>Twila and Clayton get Hitched</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
-  <link href="css/style.css" rel="stylesheet" type="text/css" />  
-
-  <script src="js/jquery-1.11.1.min.js"></script>
-  <script src="js/scripts.js"></script>
-
-  <link href="http://fonts.googleapis.com/css?family=Lora:400,400italic|Niconne" rel="stylesheet" type="text/css">
-
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-20440114-7', 'auto');
-    ga('send', 'pageview');
-  </script>
-</head>
-
-<body>
-  <div class="banner two">
-    <div class="banner-navigation">
-      <div class="container">
-        <div class="logo">
-          <a href="index.html"><h1>T&C<span> Wedding</span></h1></a>
-        </div>
-        <span class="menu"></span>
-        <div class="top-menu">
-          <ul class="nav">
-            <li class="hvr-sweep-to-bottom"><a href="photos.html">Photos</a></li>
-            <!-- <li class="hvr-sweep-to-bottom"><a href="typography.html">Wedding Party</a></li> -->
-            <!-- <li class="hvr-sweep-to-bottom"><a href="moments.html">RSVP</a></li> -->
-            <!-- <li class="hvr-sweep-to-bottom"><a href="contact.html">Registry</a></li> -->
-          </ul>
-          <div class="clearfix"></div>
-        </div>
-        <div class="clearfix"></div>
-      </div>
-    </div>
-  </div>
-
-
   <div class="about-section">
     <div class="container">
-      <h3>About Our Story</h3>
-      <p></p>
-      <p class="para"></p>
+      <h3>Our Story</h3>
       <div class="welcome-grids">
         <ul class="ch-grid">
           <li>
-            <div class="col-md-6 ch-item ch-img-1">        
+            <div class="col-md-6 ch-item ch-img-1">
               <div class="ch-info-wrap">
                 <div class="ch-info">
                   <div class="ch-info-front ch-img-1"></div>
@@ -99,7 +48,7 @@
            <div class="col-md-4 people-img">
              <img src="images/p1.jpg" alt="name" />
            </div>
-           <div class="clearfix"> </div>      
+           <div class="clearfix"> </div>
          </div>
          <div class="people-gride1">
            <div class="col-md-8 people-text">
@@ -110,7 +59,7 @@
            <div class="col-md-4 people-img">
              <img src="images/p2.jpg" alt="name" />
            </div>
-           <div class="clearfix"> </div>      
+           <div class="clearfix"> </div>
          </div>
        </div>
        <div class="col-md-6 people-section2">
@@ -123,7 +72,7 @@
              <h6>Maid of Honor</h6>
              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. exercitation ullamco Duis aute irure dolor in reprehenderit .</p>
            </div>
-           <div class="clearfix"> </div>      
+           <div class="clearfix"> </div>
          </div>
          <div class="people-gride2">
            <div class="col-md-4 people-img two">
@@ -134,12 +83,9 @@
             <h6>Maid of Honor</h6>
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat ullamco Duis aute irure dolor in reprehenderit.</p>
           </div>
-          <div class="clearfix"> </div>      
+          <div class="clearfix"> </div>
         </div>
       </div>
-      <div class="clearfix"> </div>      
+      <div class="clearfix"> </div>
     </div>
   </div>
-</div>
-</body>
-</html>
