--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <div class="banner background" id="home">
+  <div class="banner background">
     <div class="banner-navigation">
       <div class="container">
         <div class="logo">
