--- a/our-story.html
+++ b/our-story.html
@@ -50,8 +50,6 @@
   <div class="about-section">
     <div class="container">
       <h3>Our Story</h3>
-      <p></p>
-      <p class="para"></p>
       <div class="row">
         <div class="col-md-3 col-md-offset-2-5 story-box">
           <h4>2007</h4>
@@ -86,8 +84,69 @@
         <div class="col-md-7 col-md-offset-2-5 story-box">
           <h4>September 6, 2015<br>The Proposal</h4>
           <p>Clayton proposed on the The Pont Alexandre III in Paris, France. This beautiful deck arch bridge spans the Seine in Paris and was a perfect view of the Eiffel tower and sunset.</p>
+          <p>
+            <img src="images/pont-alexandre-iii.jpg">
+            <br>
+            <img src="images/eiffel-tower.jpg">
+          </p>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="people-section">
+    <div class="container">
+      <div class="people-grides">
+        <h3>Wedding Party</h3>
+        <div class="col-md-6 people-section1">
+         <div class="people-gride1">
+           <div class="col-md-8 people-text">
+             <h4>Lauren Schiff</h4>
+             <h6>Maid of Honor</h6>
+             <p></p>
+           </div>
+           <div class="col-md-4 people-img">
+             <img src="images/p1.jpg" alt="name" />
+           </div>
+           <div class="clearfix"> </div>
+         </div>
+         <div class="people-gride1">
+           <div class="col-md-8 people-text">
+             <h4>Holly Santos</h4>
+             <h6>Bridesmaid</h6>
+             <p></p>
+           </div>
+           <div class="col-md-4 people-img">
+             <img src="images/p2.jpg" alt="name" />
+           </div>
+           <div class="clearfix"> </div>
+         </div>
+       </div>
+       <div class="col-md-6 people-section2">
+         <div class="people-gride2">
+           <div class="col-md-4 people-img two">
+             <img src="images/p3.jpg" alt="name" />
+           </div>
+           <div class="col-md-8 people-text two ">
+             <h4>Matt Madruga</h4>
+             <h6>Best Man</h6>
+             <p></p>
+           </div>
+           <div class="clearfix"> </div>
+         </div>
+         <div class="people-gride2">
+           <div class="col-md-4 people-img two">
+             <img src="images/p4.jpg" alt="name" />
+           </div>
+           <div class="col-md-8 people-text two">
+            <h4>Nate Keadle</h4>
+            <h6>Groomsman</h6>
+            <p></p>
+          </div>
+          <div class="clearfix"> </div>
+        </div>
+      </div>
+      <div class="clearfix"> </div>
     </div>
   </div>
 </div>
