--- a/travel-info.html
+++ b/travel-info.html
@@ -48,7 +48,7 @@
 
   <div class="story-section">
     <div class="container">
-      <h3>The Big Event</h3>
+      <h3>Travel Information</h3>
       <br><br>
       <div class="row">
         <div class="col-md-12">
