--- a/travel-info.html
+++ b/travel-info.html
@@ -35,9 +35,7 @@
         <div class="top-menu">
           <ul class="nav">
             <li class="hvr-sweep-to-bottom"><a href="photos.html">Photos</a></li>
-            <!-- <li class="hvr-sweep-to-bottom"><a href="typography.html">Wedding Party</a></li> -->
-            <!-- <li class="hvr-sweep-to-bottom"><a href="moments.html">RSVP</a></li> -->
-            <!-- <li class="hvr-sweep-to-bottom"><a href="contact.html">Registry</a></li> -->
+            <li class="hvr-sweep-to-bottom"><a href="rsvp.html">RSVP</a></li>
           </ul>
           <div class="clearfix"></div>
         </div>
