--- a/our-story.html
+++ b/our-story.html
@@ -51,37 +51,37 @@
       <div class="row">
         <div class="col-md-3 col-md-offset-2-5 story-box">
           <h4>2007</h4>
-          <p>Twila and Clayton met in September of 2007 when they both worked at a beachfront restaurant in Huntington Beach, CA</p>
+          <p>They meet in September of 2007 when working together at a beachfront restaurant in Huntington Beach, CA</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-3 col-md-offset-6-5 story-box">
           <h4>2009</h4>
-          <p>After dating briefly, they went their separate ways when Twila moved up to Los Angeles to attend UCLA.</p>
+          <p>They date briefly, then go their separate ways when Twila moves to Los Angeles to attend UCLA.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-3 col-md-offset-2-5 story-box">
           <h4>2012</h4>
-          <p>Twila and Clayton reunited after a long time of not talking. It started with dinner and a night out dancing and since then they’ve been inseparable.</p>
+          <p>Twila and Clayton reunite after years apart. It starts with dinner and a night out dancing.  Since then they’ve been inseparable.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-3 col-md-offset-6-5 story-box">
           <h4>2013</h4>
-          <p>Moved to NYC together: After driving 3,500 miles across country together Twila and Clayton started over with new jobs and a new apartment in the big apple.</p>
+          <p>They move to NYC! After a 3,500 mile drive across the country, Twila and Clayton start over with new jobs and a new apartment in the Big Apple.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-3 col-md-offset-2-5 story-box">
           <h4>2015</h4>
-          <p>After two and a half years of hustling in the big apple Twila and Clayton decided to become digital nomads. They put their things in storage and have been traveling around the world ever since.</p>
+          <p>After two and a half years of hustling in the city, Twila and Clayton decide to put everything in storage and become digital nomads. They have been traveling the world ever since.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-7 col-md-offset-2-5 story-box">
           <h4>September 6, 2015<br>The Proposal</h4>
-          <p>Clayton proposed on the The Pont Alexandre III in Paris, France. This beautiful deck arch bridge spans the Seine in Paris and was a perfect view of the Eiffel tower and sunset.</p>
+          <p>Clayton proposes on the The Pont Alexandre III bridge in Paris, France. This beautiful deck arch bridge spans the Seine River and gives a perfect view of the Eiffel Tower at sunset.</p>
           <p>
             <img src="images/pont-alexandre-iii.jpg">
             <br>
