--- a/our-story.html
+++ b/our-story.html
@@ -49,6 +49,16 @@
     <div class="container">
       <h3>Our Story</h3>
       <div class="row">
+        <div class="col-md-4 col-md-offset-1 story-box">
+          <h4>1982</h4>
+          <p><img src="images/clayton.jpg"></p>
+        </div>
+        <div class="col-md-4 col-md-offset-2 story-box">
+          <h4>1988</h4>
+          <p><img src="images/twila.jpg"></p>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-md-3 col-md-offset-2-5 story-box">
           <h4>2007</h4>
           <p>They meet in September of 2007 when working together at a beachfront restaurant in Huntington Beach, CA</p>
@@ -82,6 +92,7 @@
         <div class="col-md-7 col-md-offset-2-5 story-box">
           <h4>September 6, 2015<br>The Proposal</h4>
           <p>Clayton proposes on the The Pont Alexandre III bridge in Paris, France. This beautiful deck arch bridge spans the Seine River and gives a perfect view of the Eiffel Tower at sunset.</p>
+          <br>
           <p>
             <img src="images/pont-alexandre-iii.jpg">
             <br>
