starting on rsvp form

--- a/rsvp.html
+++ b/rsvp.html
@@ -45,7 +45,7 @@
   </div>
 
   <div class="story-section">
-    <div class="container">
+    <div class="container rsvp-content">
       <h3>RSVP</h3>
       <br><br>
       <div class="row">
@@ -58,6 +58,18 @@
             September 25, 2016
           </p>
         </div>
+      </div>
+
+      <div class="rsvp-content hide">
+        <form>
+          <input type="text" class="textbox" placeholder="Your Name">
+          <input type="text" class="textbox" placeholder="Your E-Mail">
+          <div class="clear"> </div>
+          <div><textarea placeholder="Message"></textarea></div>
+          <div class="submit"> 
+            <input type="submit" value="SEND" />
+          </div>
+        </form>
       </div>
     </div>
   </div>
