--- a/the-big-event.html
+++ b/the-big-event.html
@@ -59,6 +59,13 @@
           </p>
         </div>
       </div>
+      <div class="row hide">
+        <div class="col-md-12">
+          <div class="responsive-iframe">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26509.72589027641!2d-118.41497596172279!3d33.84544078066276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b35e3a794125%3A0x77b074083bf70e03!2s260+Portofino+Way%2C+Redondo+Beach%2C+CA+90277!5e0!3m2!1sen!2sus!4v1457662586100" width="960" height="320" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
