Registry coming soon

--- a/registry.html
+++ b/registry.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <div class="banner background">
+  <div class="banner" id="home">
     <div class="banner-navigation">
       <div class="container">
         <div class="logo">
@@ -42,34 +42,21 @@
         <div class="clearfix"></div>
       </div>
     </div>
-    <div class="banner-title">
-      <div class="banner-info">
-        <h3>Clayton <span>&</span> Twila</h3>
-        <p>September 25th, 2016</p>
-      </div>
-    </div>
   </div>
 
   <div class="story-section">
     <div class="container">
-      <div class="story-grids">
-        <div class="col-sm-3 story-grid">
-          <h4><a href="our-story.html">Our Story</a></h4>
-          <p>He asked, she said yes. Find out how it all came to be.</p>
+      <h3>Registry</h3>
+      <div class="row">
+        <div class="col-md-12">
+          <h4 class="text-center">More info coming soon</h4>
+          <br>
+          <p class="text-center">
+            Redondo Beach, CA
+            <br>
+            September 25, 2016
+          </p>
         </div>
-        <div class="col-sm-3 story-grid">
-          <h4><a href="the-big-event.html">The Big Event</a></h4>
-          <p>Eat, drink, dance &mdash; get ready for a great time!</p>
-        </div>
-        <div class="col-sm-3 story-grid">
-          <h4><a href="travel-info.html">Travel Info</a></h4>
-          <p>Everything you need to know about getting to the party.</p>
-        </div>
-        <div class="col-sm-3 story-grid">
-          <h4><a href="registry.html" target="_blank">Registry</a></h4>
-          <p>Help us start our new home together.</p>
-        </div>
-        <div class="clearfix"></div>
       </div>
     </div>
   </div>
