--- a/our-story.html
+++ b/our-story.html
@@ -60,7 +60,7 @@
       <div class="row">
         <div class="col-md-3 col-md-offset-2-5 story-box">
           <h4>2007</h4>
-          <p>They meet in September of 2007 when working together at a beachfront restaurant in Huntington Beach, CA</p>
+          <p>They meet in September of 2007 when working together at a beachfront restaurant in Huntington Beach, CA.</p>
         </div>
       </div>
       <div class="row">
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col-md-3 col-md-offset-2-5 story-box">
           <h4>2012</h4>
-          <p>Twila and Clayton reunite after years apart. It starts with dinner and a night out dancing.  Since then they’ve been inseparable.</p>
+          <p>Twila and Clayton reunite after years apart. It starts with dinner and a night out dancing. Since then they’ve been inseparable.</p>
         </div>
       </div>
       <div class="row">
@@ -84,7 +84,7 @@
       <div class="row">
         <div class="col-md-3 col-md-offset-2-5 story-box">
           <h4>2015</h4>
-          <p>After two and a half years of hustling in the city, Twila and Clayton decide to put everything in storage and become digital nomads. They have been traveling the world ever since.</p>
+          <p>After two and a half years of hustling in the city, Twila and Clayton put everything in storage and become digital nomads.<br><br>They have been traveling the world ever since.</p>
         </div>
       </div>
       <div class="row">
@@ -104,59 +104,113 @@
 
   <div class="people-section">
     <div class="container">
-      <div class="people-grides">
-        <h3>Wedding Party</h3>
-        <div class="col-md-6 people-section1">
-         <div class="people-gride1">
-           <div class="col-md-8 people-text">
-             <h4>Lauren Schiff</h4>
-             <h6>Maid of Honor</h6>
-             <p></p>
-           </div>
-           <div class="col-md-4 people-img">
-             <img src="images/p1.jpg" alt="name" />
-           </div>
-           <div class="clearfix"> </div>
-         </div>
-         <div class="people-gride1">
-           <div class="col-md-8 people-text">
-             <h4>Holly Santos</h4>
-             <h6>Bridesmaid</h6>
-             <p></p>
-           </div>
-           <div class="col-md-4 people-img">
-             <img src="images/p2.jpg" alt="name" />
-           </div>
-           <div class="clearfix"> </div>
-         </div>
-       </div>
-       <div class="col-md-6 people-section2">
-         <div class="people-gride2">
-           <div class="col-md-4 people-img two">
-             <img src="images/p3.jpg" alt="name" />
-           </div>
-           <div class="col-md-8 people-text two ">
-             <h4>Matt Madruga</h4>
-             <h6>Best Man</h6>
-             <p></p>
-           </div>
-           <div class="clearfix"> </div>
-         </div>
-         <div class="people-gride2">
-           <div class="col-md-4 people-img two">
-             <img src="images/p4.jpg" alt="name" />
-           </div>
-           <div class="col-md-8 people-text two">
-            <h4>Nate Keadle</h4>
-            <h6>Groomsman</h6>
-            <p></p>
+      <h3>Wedding Party</h3>
+      <h4 class="cursive">Bridesmaids</h4>
+      <div class="row people-images" data-target="#bridesmaid">
+        <div class="col-10">
+          <img src="images/lauren.jpg">
+          <div class="person-content">
+            <h4>Lauren Schiff</h4>
+            <h6>Maid of Honor</h6>
+            <p>Lauren knew Twila was her one and only when their paths crossed at their internships at TravelAge West during their UCLA days. Despite working in an otherwise bleak, grey, sterile, and totally silent environment, their eyes locked at the hot cocoa station one afternoon and fate took it from there. After rekindling their mutual passions for travel, wine, and all the cheese, their zests for life were reignited, and their many epic adventures together began.<br><br>From trips up the coast to San Francisco shenanigans their love for life and positive outlook has become the glue that holds them together - no matter what the distance. Nearly a decade later, and with many incredible times together under their belts, Lauren is finally ready to let Clayton dance through life with Twila from here on out. If he leaves collateral ;-)</p>
           </div>
-          <div class="clearfix"> </div>
+        </div>
+        <div class="col-10">
+          <img src="images/carina.jpg">
+          <div class="person-content">
+            <h4>Carina Hessmer</h4>
+            <h6>Bridesmaid</h6>
+            <p>Our adventure began a decade ago when we left our families and homes and found ourselves sharing a room as strangers in our first home away from home. But, what started as two strangers quickly evolved into a hilarious and mischievous amazonian woman friendship fueled by late night smashings (no, I don't mean we got smashed... feel free to ask for a demo), a diverse scholarly reward system and dance parties to the soundtrack of our vast collection of Putumayo CD's.<br><br>As each other's Che Cosas (our nickname for each other) we have annihilated the mundane all along the California Coastline with SoCal's Gypsy Den evenings, Santa Barbarian Motorcycle rides, San Luis Obispo Rocky Horrors, Isla Vista Hippie, Drum Circled Bonfires, and San Franciscan Rainstorm Dashes.  And the Saga continues. ;-)</p>
+          </div>
+        </div>
+        <div class="col-10">
+          <img src="images/deanna.jpg">
+          <div class="person-content">
+            <h4>Deanna Swank</h4>
+            <h6>Bridesmaid</h6>
+            <p>The nickname that Twila and I placed on one another, "Sunshine," appropriately explains our friendship. Although we had become acquainted with one another as we were closing the "high school" chapter of our lives, we became inseparable entering the "college" years. This was a pivotal time to have a "sunshine" in one's life: a time where heartbreak entered our lives and we were able to be available as a shoulder to cry on, a time to pack up boxes from our childhood homes as we began to build our own places, a time to voice our dreams and fears with one another, even if our surrounding peers were not on the same page. We knew we had someone who understood the importance of dreaming bigger than the unimaginable.<br><br>As our dreams started to lift off, both distance and time apart increased as well, but at the end of the day, we have had a friend that will both ground us in our childhood roots while still encouraging us to "dream bigger!" So, although our friendship has been filled with adventures of "bubbling" at our hometown lake, midnight escapes to the beach to see the sunrise, edging our way to Josh Groban's front row to get his autograph, a day of frolicking at Disneyland, or the shortest tour through New York City to enjoy artichoke pizza, I am certain that this is only the beginning and I feel so honored to soak in another "milestone" with my Sunshine!</p>
+          </div>
+        </div>
+        <div class="col-10">
+          <img src="images/holly.jpg">
+          <div class="person-content">
+            <h4>Holly Santos</h4>
+            <h6>Bridesmaid</h6>
+            <p>The story of Twolly: We met in June 2009 through a mutual friend and immediately hit it off. I remember vividly telling her "we're going to be best friends" the first time we hung out. Honestly, it's amazing she didn't run away at that point! Well she didn't and we became BFFs (as predicted) and so became Twolly! :)<br><br>In the following weeks, months and years we made so many incredible memories that it is impossible to count or even to remember all of them. Looking through old photos of us is like looking at stills from some wild and crazy TV show that you couldn't believe had been our real life. From all night dance parties, mellow beach days snacking on vegetables (she always did bring out my inner vegetarian), attending her UCLA graduation and spending Christmas in the Mountains with her family, we really ran the gamut on experiences. Living together for almost 2 years and loving it, without moving out as enemies (a feat in itself!) are all memories I hold dearly.<br><br>Growing up together and turning into mature, responsible adults has been such an adventure with Twila by my side. Being there for the beginning of relationships, and some ends, the "Screaming Baby Face" and "Jamagel" moments, the day she stood next to me as I married the love of my life and now I get to return the favor. Cheers to many more wild and crazy years as we navigate through the next steps in our lives!</p>
+          </div>
+        </div>
+        <div class="col-10">
+          <img src="images/melissa.jpg">
+          <div class="person-content">
+            <h4>Melissa Lau</h4>
+            <h6>Bridesmaid</h6>
+            <p>It all started with my tacky invitation to Korean BBQ (which consists of basically all red meats) to this lovely pescetarian lady. Twila and I have known each other for 5 years and counting now but we've done it all from weekday shenanigans to an impulsive trip to NYC during Hurricane Sandy for a festival. Whether we're separated by 1-6 time zones, we can always go weeks without talking and pick up right where we left off. I'm so excited to be a part of Clayton and Twila's union and to celebrate with them as they take a step towards the next chapter in their life.<br><br>When you hang out with Clayon and Twila, you get it. I realized it when we were out and about (on a weekday, of course) and they were in the backseat of my car making up random songs, cracking lame (sorry, but true hehe) jokes and I had to say "children, behave!" It’s not worth having me explain their beautiful compatibility together, it’s more fun to watch them and tease them about it. So, might I end now, I am so extremely happy for these two great people!</p>
+          </div>
         </div>
       </div>
-      <div class="clearfix"> </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="person empty" id="bridesmaid">
+            <h4></h4>
+            <h6></h6>
+            <p></p>
+          </div>
+        </div>
+      </div>
+
+      <h4 class="hide">Groomsmen</h4>
+      <div class="hide row people-images" data-target="#groomsman">
+        <div class="col-10">
+          <img src="images/p1.jpg">
+          <div class="person-content">
+            <h4></h4>
+            <h6></h6>
+            <p></p>
+          </div>
+        </div>
+        <div class="col-10">
+          <img src="images/p1.jpg">
+          <div class="person-content">
+            <h4></h4>
+            <h6></h6>
+            <p></p>
+          </div>
+        </div>
+        <div class="col-10">
+          <img src="images/p1.jpg">
+          <div class="person-content">
+            <h4></h4>
+            <h6></h6>
+            <p></p>
+          </div>
+        </div>
+        <div class="col-10">
+          <img src="images/p1.jpg">
+          <div class="person-content">
+            <h4></h4>
+            <h6></h6>
+            <p></p>
+          </div>
+        </div>
+        <div class="col-10">
+          <img src="images/p1.jpg">
+          <div class="person-content">
+            <h4></h4>
+            <h6></h6>
+            <p></p>
+          </div>
+        </div>
+      </div>
+      <div class="hide row">
+        <div class="col-md-12">
+          <div class="person" id="groomsman">
+            <h4></h4>
+            <h6></h6>
+            <p></p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
 </body>
 </html>
