--- a/rsvp.html
+++ b/rsvp.html
@@ -64,7 +64,7 @@
             <div class="form-field step-2 hidden">
               Will you attend:<br>
               <input type="radio" name="rsvp[attendance]" value="Attending" id="rsvp_attendance_yes"><label for="rsvp_attendance_yes">I'll be there!</label>
-              <input type="radio" name="rsvp[attendance]" value="Not attending" id="rsvp_attendance_no"><label for="rsvp_attendance_no">Regretfully, no</labvel>
+              <input type="radio" name="rsvp[attendance]" value="Sorry" id="rsvp_attendance_no"><label for="rsvp_attendance_no">Regretfully, no</label>
             </div>
             <div class="form-field step-2 hidden">
               Your Meal choice:<br>
