--- a/the-big-event.html
+++ b/the-big-event.html
@@ -49,13 +49,12 @@
       <h3>The Big Event</h3>
       <div class="row">
         <div class="col-md-12">
-          <h4 class="text-center">More info coming soon</h4>
-          <br>
           <p class="text-center">
             Redondo Beach, CA
             <br>
             September 25, 2016
           </p>
+          <p class="text-center">Attire: Formal</p>
         </div>
       </div>
       <div class="row hide">
