--- a/travel-info.html
+++ b/travel-info.html
@@ -48,9 +48,21 @@
     <div class="container">
       <h3>Travel Information</h3>
       <div class="row">
-        <div class="col-md-12">
-          <h4 class="text-center">More info coming soon</h4>
-          <br>
+        <div class="col-md-8 col-md-offset-2">
+          <h4>Transportation</h4>
+          <p>
+            Valet parking is available for $12 per car; there are no self-parking options.
+            We encourage carpooling and/or using Uber or Lyft.  If you haven't used Uber or Lyft before, here are some promo codes for free rides:
+            <br><strong>Uber</strong>: 1l6z3
+            <br><strong>Lyft</strong>: TWILA4
+          </p>
+
+          <h4 class="text-center">Staying the night</h4>
+          <p>We have arranged for a guestroom block at the Marriott Residence Inn Redondo Beach at a discounted rate of $179/night.
+            To book, you can <a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Grissom%20%26%20Liggitt%20Wedding%5ELAXTC%60GLWGLWA%60179.00%60USD%60false%603%609/24/16%609/26/16%609/2/16&app=resvlink&stop_mobi=yes" target="_blank">book your group rate online</a>,
+            or call 1-800-228-9290 and be sure to mention the Grissom-Liggitt wedding.
+          </p>
+          <br><br>
           <p class="text-center">
             Redondo Beach, CA
             <br>
