--- a/rsvp.html
+++ b/rsvp.html
@@ -49,6 +49,9 @@
     <div class="container rsvp-content">
       <h3>RSVP</h3>
       <div class="row margin-bottom">
+        <h4 class="center">This will be enabled as soon as we have finished our menu tasting</h4>
+      </div>
+      <div class="row margin-bottom hidden">
         <div class="col-md-6 col-md-offset-3">
           <div id="error" class="alert alert-danger hidden"></div>
           <form id="rsvp-form" action="localhost:4567" method="post">
